--- a/admin/template/plugins.html
+++ b/admin/template/plugins.html
@@ -61,6 +61,7 @@
     </div>
 </div>
 
+{{$adminPath := .AdminPath}}
 {{range $name, $cfg := .Plugins}}
 <div id="plugin-{{$name}}" class="tab-content">
     <div class="settings-container">
@@ -146,6 +147,11 @@
                     style="padding: 10px 50px; font-size: 16px;">保存广告配置</button>
             </div>
         </form>
+        {{else if eq $name "db_optimizer"}}
+        <!-- DB Optimizer 插件界面 -->
+        <div style="border: 0px solid #ddd; border-radius: 4px; overflow: hidden;">
+            <iframe src="{{$adminPath}}/plugin/db_optimizer" style="width: 100%; height: 600px; border: none;"></iframe>
+        </div>
         {{else}}
         <!-- 通用插件配置界面 -->
         <form id="form-{{$name}}" onsubmit="savePluginConfig(event, '{{$name}}')">
