--- a/template/html/head.html
+++ b/template/html/head.html
@@ -17,7 +17,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1">
     <base target="_self">
     <link rel="shortcut icon" type="image/x-icon" href="/static/img/favicon.ico" media="screen">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/font-awesome.min.css">
     <link rel="stylesheet" href="/static/css/style.css?v=1.1">
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/opencc.js"></script>
