--- a/template/html/book_info.html
+++ b/template/html/book_info.html
@@ -33,8 +33,8 @@
                             class="fa fa-file-text"> 开始阅读</i></a>
                     {{end}}
 
-                    <a class="l_btn_0" href="javascript:addToBookshelf({{.Article.ArticleID}});" rel="nofollow"><i
-                            class="fa fa-heart"> 收藏本书</i></a>
+                    <a class="l_btn_0" href="javascript:addToBookshelf({{transID .Article.ArticleID}});"
+                        rel="nofollow"><i class="fa fa-heart"> 收藏本书</i></a>
                 </div>
             </div>
         </div>
