--- a/template/html/foot.html
+++ b/template/html/foot.html
@@ -4,7 +4,7 @@
         <p><i class="fa fa-flag"></i>&nbsp;<a href="/">{{.SiteName}}</a>&nbsp;书友最值得收藏的网络小说阅读网</p>
         <p><a href="javascript:zh_tran('s');" class="zh_click" id="zh_click_s">简体版</a> · <a
                 href="javascript:zh_tran('t');" class="zh_click" id="zh_click_t">繁體版</a> ·
-            <a href="http://www.ccbook.org/sitemap/sitemap.xml" class="zh_click">网站地图</a>
+            <a href="/sitemap/sitemap.xml" class="zh_click">网站地图</a>
         </p>
     </footer>
     {{call .ProcessingComment}}
