--- a/template/html/book_reader.html
+++ b/template/html/book_reader.html
@@ -1,6 +1,6 @@
 {{template "head.html" .}}
-<script src="/static/js/jquery.cookie.js"></script>
-<script src="/static/js/reader.js"></script>
+<script src="/tpl_static/js/jquery.cookie.js"></script>
+<script src="/tpl_static/js/reader.js"></script>
 
 <div class="read_bg">
     <main class="container">
