--- a/template/html/head.html
+++ b/template/html/head.html
@@ -14,12 +14,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1">
     <base target="_self">
-    <link rel="shortcut icon" type="image/x-icon" href="/static/img/favicon.ico" media="screen">
-    <link rel="stylesheet" href="/static/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/static/css/style.css?v=1.1">
-    <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/opencc.js"></script>
-    <script src="/static/js/zh_tran.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="/tpl_static/img/favicon.ico" media="screen">
+    <link rel="stylesheet" href="/tpl_static/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/tpl_static/css/style.css?v=1.1">
+    <script src="/tpl_static/js/jquery.min.js"></script>
+    <script src="/tpl_static/js/opencc.js"></script>
+    <script src="/tpl_static/js/zh_tran.js"></script>
 
 </head>
 
