--- a/template/html2/foot.html
+++ b/template/html2/foot.html
@@ -13,7 +13,7 @@
     <p style="text-align:center;margin:10px 0; color: #999;">{{.SiteName}}</p>
 </a>
 <div style="display:none">
-    {{.StatsCode}}
+    {{.Analytics}}
 </div>
 </body>
 
